--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -57,7 +57,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About The Suaves</a>
+                        <a  href="/api/available">API</a>
                     </li>
                    
                         <!--<a class="page-scroll" href="#download">Apple Apps</a>-->
