--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-custom navbar-absolute-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Home</a>
+                    <a class="navbar-brand" href="/">Home</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     Menu <i class="fa fa-bars"></i>
                 </button>
