--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -55,6 +55,10 @@
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="#page-top"></a>
+
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About The Suaves</a>
                     </li>
                     <li>
                         <a  href="/api/available">API</a>
