apps file updated with page list

--- a/Template/Apps.html
+++ b/Template/Apps.html
@@ -66,7 +66,15 @@
                        
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Mobile Apps<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="Apps.html">Apps</a></li></ul>
+                                <li><a href="Apps.html">All Apps</a></li>
+                                 <li><a href="pacman.html">Pac Man</a></li>
+                                 <li><a href="directtv.html">Direct TV</a></li>
+                                 <li><a href="wellsfargo.html">Wells Fargo</a></li>
+                                 <li><a href="pacman.html">Pac Man</a></li>
+                                 <li><a href="usaa.html">USAA</a></li>
+                                 <li><a href="bestbuy.html">Best Buy</a></li>
+
+                            </li>
                             </li>
                 </ul>
             </div>
