--- a/Template/index.html
+++ b/Template/index.html
@@ -65,7 +65,7 @@
                        
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Mobile Apps<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="Apps.html">Apps</a></li></ul>
+                                <li><a href="Apps.html">All Apps</a></li></ul>
                             </li>
 
                         
