pac man page copy

--- a/Template/pacman.html
+++ b/Template/pacman.html
@@ -66,10 +66,77 @@
                        
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Mobile Apps<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="Apps.html">All Apps</a></li>
-                                <li><a href="pacman.html">Pac Man</a></li>
+                                 <li><a href="Apps.html">All Apps</a></li>
+                                 <li><a href="pacman.html">Pac Man</a></li>
+                                 <li><a href="directtv.html">Direct TV</a></li>
+                                 <li><a href="wellsfargo.html">Wells Fargo</a></li>
+                                 <li><a href="usaa.html">USAA</a></li>
+                                 <li><a href="bestbuy.html">Best Buy</a></li>
                             </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading">Pac Man</h1>
+                        <img src ="https://www.google.com/logos/2010/pacman10-hp.png" alt= "Pac Man">
+                        
+                           
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+<div class="container">
+        <div class="row">
+            <div class="col-md-5" style="margin: 6px">
+                <h3>Apple</h3>
+                <table border="1" class="table table-bordered table-hover table-condensed">
+                    <thead>
+                        <tr>
+                            <th title="Field #1">Price</th>
+                            <th title="Field #1">User Rating</th>
+                            <th title="Field #1">File Size</th>
+                            <th title="Field #1">Content Rating</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                           
+                            <td align="right">$0.00</td>
+                            <td align="right">3.0</td>
+                            <td align="right">96.2MB</td>
+                            <td align="right">1</td>
+                           
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-5" style="margin: 6px">
+                <h3>Android</h3>
+                <table border="1" class="table table-bordered table-hover table-condensed">
+                        <thead>
+                            <tr>
+                                <th title="Field #1">Price</th>
+                                <th title="Field #1">User Rating</th>
+                                <th title="Field #1">File Size</th>
+                                <th title="Field #1">Content Rating</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            <td align="right">$0.00</td>
+                            <td align="right">4.2</td>
+                            <td align="right">37MB</td>
+                            <td align="right">1</td>
+                            </tr>
+                        </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
