--- a/web/templates/Apps.html
+++ b/web/templates/Apps.html
@@ -12,17 +12,19 @@
     <title>Suave Apps</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="static/css/grayscale.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,6 +37,45 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-absolute-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                    <a class="navbar-brand" href="/">Home</a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top"></a>
+                    
+                    <!--<i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap-->
+                
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a  href="/api/available">API</a>
+                        
+                    </li>
+                   
+                        <!--<a class="page-scroll" href="#download">Apple Apps</a>-->
+                       
+                       
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Mobile Apps<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                    {%for app in apps%}
+                                    <li><a href="{{app}}">{{app}}</a></li>
+                                    {%endfor%}
+                         </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
                             <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
@@ -54,7 +95,7 @@
    <!--<section class="container mt-5 ">-->
         <!--<div class="container ">-->
             <!--<div class="col text-white bg-secondary">-->
-                <h6 class="display-4"><a class="navbar-brand" href="/">Home</a></h6>
+                <h6 class="display-4">Data</h6>
                 <hr class="divider"></hr>
                 <!--<div class="container table-responsive mt-5">-->
 
@@ -101,8 +142,6 @@
                             </tr>
                         </tbody>
                 </table>
-                <br>
-                <a href="\api/{{name}}">View as JSON</a>
             </div>
         </div>
     </div>
