--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,34 +10,86 @@
     <meta name="author" content="">
 
     <title>Suave Apps</title>
-    <!-- <link ... href="{{ url_for('static', filename='css/grayscale.css') }}" /> -->
+
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-    <script type=text/javascript src="{{
-        url_for('static', filename='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js') }}"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-    <script type=text/javascript src="{{
-        url_for('static', filename='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js') }}"></script>
+    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+
 
     <!-- Custom Fonts -->
-    <!-- <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
-    <link type=text/css src="{{
-        url_for('static', filename='vendor/font-awesome/css/font-awesome.min.css') }}"></link>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"> -->
-    <link type=text/css src="{{
-        url_for('static', filename='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic') }}"></link>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"> -->
-    <link type=text/css src="{{
-        url_for('static', filename='https://fonts.googleapis.com/css?family=Montserrat:400,700') }}"></link>
+    <link href="static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <!-- <link href="css/grayscale.css" rel="stylesheet"> -->
-    <link ... href="{{ url_for('static', filename='css/grayscale.css') }}" />
+    <link href="static/css/grayscale.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-absolute-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                    <a class="navbar-brand" href="/">Home</a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top"></a>
+                    
+                    <!--<i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap-->
+                
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About The Suaves</a>
+                    </li>
+                    <li>
+                        <a  href="/api/available">API</a>
+                    </li>
+                   
+                        <!--<a class="page-scroll" href="#download">Apple Apps</a>-->
+                       
+                       
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Mobile Apps<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                {%for app in apps%}
+                                <li><a href="info/{{app}}">{{app}}</a></li>
+                                {%endfor%}
+                            </ul>
+                        </li>
+                            
+                            <!--  <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="Mob">Android Apps<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                        <li><a href="Android_data.html">Android </a></li></ul>-->
+                    </li>
+                    <li>
+                        <!--<a class="page-scroll" href="#contact">Android Apps</a>-->
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
     <!-- Intro Header -->
     <header class="intro">
@@ -86,15 +138,6 @@
                     <!--<a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>-->
                 </div>
             </div>
-            <div>
-                    <h2>App List</h2>
-                    <p>Click any link below to view info about the app. </p>
-                <ul>
-                    {%for app in apps%}
-                    <li><a href="info/{{app}}">{{app}}</a></li>
-                    {%endfor%}
-                </ul>
-            </div>
         </div>
     </section>
 
@@ -108,7 +151,7 @@
                 </br>
                     <a href="mailto:martina.maagdy@yahoo.com">Martina : martina.maagdy@yahoo.com</a>
                 </br>
-                    <a href="mailto:jcherepow@gmail.com">Jackie : jcherepow@gmail.com</a>
+                    <a href="mailto:jcherepow@gmail.com">Jacky : jcherepow@gmail.com</a>
                 </br>
                     <a href="mailto:willb410@gmail.com">Will: willb410@gmail.com</a>
                 </br>
@@ -153,18 +196,6 @@
 
     <!-- Theme JavaScript -->
     <!--<script src="js/grayscale.min.js"></script>-->
-<!-- <link ... href="{{ url_for('static', filename='css/grayscale.css') }}" /> -->
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> 
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-   
-    <!-- Theme CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
 
 </body>
 
