web pages with style

--- a/web/templates/Apps.html
+++ b/web/templates/Apps.html
@@ -12,19 +12,19 @@
     <title>Suave Apps</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 
 
     <!-- Custom Fonts -->
-    <link href="static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static',filename='vendor/font-awesome/css/font-awesome.min.css')}}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="static/css/grayscale.css" rel="stylesheet">
+    <link href="{{ url_for('static',filename='css/grayscale.css')}}" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -82,7 +82,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Apps</h1>
+                        <h1 class="brand-heading">App Details</h1>
                         
                            
                         </a>
@@ -95,7 +95,6 @@
    <!--<section class="container mt-5 ">-->
         <!--<div class="container ">-->
             <!--<div class="col text-white bg-secondary">-->
-                <h6 class="display-4">Data</h6>
                 <hr class="divider"></hr>
                 <!--<div class="container table-responsive mt-5">-->
 
@@ -142,6 +141,8 @@
                             </tr>
                         </tbody>
                 </table>
+                <br>
+                <a href="\api/{{name}}">View as JSON</a>
             </div>
         </div>
     </div>
